--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -1,7 +1,41 @@
+.logo-color {
+  color: #990000;
+}
+
+.navbar-wrapper {
+    background: #FFF none repeat scroll 0% 0%;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    box-sizing: border-box;
+    z-index: 900;
+    font-size: 14px;
+    color: #FFF;
+    border-top: 2px solid #B92B27;
+}
+
+.navbar {
+  width: 1002px;
+  position: relative;
+  box-sizing: border-box;
+  margin: 0px auto;
+}
+
 .navbar .user {
   font-weight: bold;
 }
 
 .navbar .navbar-brand {
   font-weight: bold;
+}
+
+.content-wrapper {
+  width: 1002px;
+  margin: 0px auto;
+  margin-top: 0px;
+  margin-right: auto;
+  margin-bottom: 0px;
+  margin-left: auto;
+  padding-top: 80px;
 }
