--- a/views/partials/header-b.ejs
+++ b/views/partials/header-b.ejs
@@ -13,7 +13,7 @@
   integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r"
   crossorigin="anonymous">
 
-<link rel="stylesheet" href="/stylesheets/common.css">
+<link rel="stylesheet" href="/stylesheets/home.css">
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
