--- a/views/partials/footer-b.ejs
+++ b/views/partials/footer-b.ejs
@@ -5,6 +5,7 @@
   integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
   crossorigin="anonymous"></script>
 <!-- REact.js -->
-<script src="https://fb.me/react-with-addons-0.14.3.js"></script>
+<script src="https://fb.me/react-0.14.3.js"></script>
 <script src="https://fb.me/react-dom-0.14.3.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
 <script src="/js/js.cookie.js"></script>
