adding search feature to the UI and rendering of concepts

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   </head>
   <body>
-    <div class="navbar-wrapper">
+    <div class="main-wrapper">
       <div class="navbar">
         <nav class="navbar navbar-default">
           <div class="container-fluid">
@@ -48,14 +48,9 @@
           </div><!-- /.container-fluid -->
         </nav>
       </div> <!-- end navbar -->
-    </div> <!-- end navbar-wrapper -->
-
-    <div class="content-wrapper">
-      <div class="concept-container">
-        <div class="alert alert-danger" style="display:none" role="alert"></div>
+      <div id="concept-container">
       </div>
-    </div>
-
+    </div> <!-- end main-wrapper -->
     <!-- include footer -->
     <% include ../partials/footer-b.ejs %>
     <script type="text/babel" src="/js/Search.js"></script>
