--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -2,7 +2,7 @@
   color: #990000;
 }
 
-.navbar-wrapper {
+.main-wrapper {
     background: #FFF none repeat scroll 0% 0%;
     position: fixed;
     top: 0px;
@@ -15,6 +15,13 @@
 }
 
 .navbar {
+  width: 1002px;
+  position: relative;
+  box-sizing: border-box;
+  margin: 0px auto;
+}
+
+#concept-container {
   width: 1002px;
   position: relative;
   box-sizing: border-box;
@@ -43,21 +50,50 @@
   color: #000000;
   display: block;
 }
+
 #search-area .result:hover {
   background-color: #ececec;
 }
+
 #search-area .result.active {
   background-color: #ececec;
 }
+
 #search-area .result .title{
   margin-left: 20px;
 }
+
 #search-area a {
   text-decoration: none;
 }
+
 #search-area b {
   color: #00BBFF
 }
+
 #search-area .description{
   font-size: 13px;
+}
+
+.resource-count {
+    color: #333;
+    font-weight: 500;
+    font-size: 18px;
+    padding-bottom: 8px;
+}
+
+.profile_photo_img {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+}
+
+.resource {
+  border-top: 1px solid #e2e2e2;
+  padding: 10px 0px;
+}
+
+.user-info {
+  text-decoration: none;
+  color: #333;
 }
