--- a/views/pages/signin.ejs
+++ b/views/pages/signin.ejs
@@ -7,14 +7,17 @@
 <body>
   <div class="ContainerWrapper">
     <div class="logo logo-color">conceptbase</div>
-    <div class="tagline">The best reference to any concept, now <span class="logo-color">personalized</span></div>
+    <div class="tagline">The best reference to any concept, now <span class="logo-color">curated and personalized</span></div>
     <div class="container">
       <form id="signin-form" class="form-signin">
-        <h2 class="form-signin-heading">Please sign in</h2>
+        <h1 class="form-signin-heading">Please sign in</h1>
         <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" name="email" class="form-control" placeholder="Email address" required autofocus>
+        <input type="email" id="inputEmail" name="email" class="form-control"
+          placeholder="any well-formed email (joe@foo.com)" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
+        <!--
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+      -->
         <div class="checkbox">
           <label>
             <input type="checkbox" value="remember-me"> Remember me
