--- a/views/partials/footer-b.ejs
+++ b/views/partials/footer-b.ejs
@@ -9,3 +9,4 @@
 <script src="https://fb.me/react-dom-0.14.3.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
 <script src="/js/js.cookie.js"></script>
+<script src="/js/concept.base.js"></script>
