adding db loader, adding description to concept detail page

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -101,3 +101,9 @@
 i.thumbs:hover {
   cursor: pointer;
 }
+
+.concept-description {
+  font-size: 16px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
